update JS/JQ to include values for each movie which represent the cost instead of ids. It will also add classes to each movie and time option to enable the print out of the selected movie and time in the results.

--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
           </div>
           <div class="form-group">
             <select class="form-control" id="movie">
-              <option>Casper 7 (G)</option>
-              <option id="rerelease">Brave Little Toaster (G)</option>
-              <option id="rerelease-two">A Boring and Dry Documentary (NR)</option>
-              <option>Kambucha (PG-13)</option>
-              <option>Action Dudes 9 (PG-13)</option>
-              <option>Cry Me A River (PG-13)</option>
-              <option>Shrek 14: Get Shreked (R)</option>
-              <option>Three Fast Seven You: Paul's Ghost (R)</option>
-              <option>Atlas Shrugged 4: One More Shrugg (R)</option>
+              <option class="movie-name" value="1">Casper 7 (G)</option>
+              <option class="movie-name" value="2">Brave Little Toaster (G)</option>
+              <option class="movie-name" value="2">A Boring and Dry Documentary (NR)</option>
+              <option class="movie-name" value="1">Kambucha (PG-13)</option>
+              <option class="movie-name" value="1">Action Dudes 9 (PG-13)</option>
+              <option class="movie-name" value="1">Cry Me A River (PG-13)</option>
+              <option class="movie-name" value="3">Shrek 14 in 3D: Get Shreked (R)</option>
+              <option class="movie-name" value="1">Three Fast Seven You: Paul's Ghost (R)</option>
+              <option class="movie-name" value="3">Atlas Shrugged 4: One More Shrugg (R)</option>
             </select>
             <select class="form-control" id="movie-time">
-              <option id="matinee">12PM</option>
-              <option id="matinee-two">2PM</option>
-              <option>4PM</option>
-              <option>6PM</option>
-              <option>8PM</option>
-              <option>10PM</option>
+              <option class="movie-time" value="1">12PM</option>
+              <option class="movie-time" value="1">2PM</option>
+              <option class="movie-time" value="2">4PM</option>
+              <option class="movie-time" value="2">6PM</option>
+              <option class="movie-time" value="3">8PM</option>
+              <option class="movie-time" value="3">10PM</option>
             </select>
           </div>
 
